--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Kates Kitchen New Website</title>
+    <meta name="author" content="David Colquhoun">
+    <title>Kates Kitchen new look website</title>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/animate.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">	
@@ -46,7 +46,6 @@
                         <li class="scroll active"><a href="#navigation">Home</a></li>                         
                         <li class="scroll"><a class="border" href="#services">Services</a></li>
                         <li class="scroll"><a class="border" href="#about-us">About Us</a></li>
-                        <li class="scroll"><a class="border" href="#testimonials">Testimonials</a></li>
                         <li class="scroll"><a class="border" href="#portfolio">Portfolio</a></li>
                         <li class="scroll"><a class="border" href="#clients">Clients</a></li> 
                         <li class="scroll"><a class="border" href="#blog">Blog</a></li>
@@ -67,34 +66,40 @@
 		</ol><!--/.carousel-indicators-->
 		
 		<div class="carousel-inner">
-			<div class="item active" style="background-image: url(assets/images/slider/1.jpg)">
+			<div class="item active" style="background-image: url(assets/images/slider/ourGarden.jpg)">
 				<div class="container carousel-caption">							
-					<h2 class="heading animated bounceInRight">We love to explore, <span>design</span><i class="fa fa-chevron-right"></i></h2>
-					<p class="slide-info animated bounceInLeft">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>				
+					<h2 class="heading animated bounceInRight">Chillout <span>zone</span><i class="fa fa-chevron-right"></i></h2>
+					<p class="slide-info animated bounceInLeft">A peaceful sanctuary for busy minds</p>				
 				</div>
 			</div>
-			<div class="item" style="background-image: url(assets/images/slider/2.jpg)">
+			<div class="item" style="background-image: url(assets/images/slider/gardenProject.jpg)">
 				<div class="container carousel-caption">							
-					<h2 class="heading animated swing">We provide digital <span>service</span><i class="fa fa-chevron-right"></i></h2>
-					<p class="slide-info animated swing">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>				
+					<h2 class="heading animated swing">The garden <span>project</span><i class="fa fa-chevron-right"></i></h2>
+					<p class="slide-info animated swing">Building community through gardening</p>				
 				</div>
 			</div>
-			<div class="item" style="background-image: url(assets/images/slider/3.jpg)">
+			<div class="item" style="background-image: url(assets/images/slider/polytunnel.jpg)">
 				<div class="container carousel-caption">							
-					<h2 class="heading animated bounceInDown">We are great disital <span>agency</span><i class="fa fa-chevron-right"></i></h2>
-					<p class="slide-info animated bounceInUp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>				
+					<h2 class="heading animated bounceInDown">The <span>polytunnel</span><i class="fa fa-chevron-right"></i></h2>
+					<p class="slide-info animated bounceInUp">A promising start!</p>				
 				</div>
 			</div>
-			<div class="item" style="background-image: url(assets/images/slider/4.jpg)">
+			<div class="item" style="background-image: url(assets/images/slider/northRun.jpg)">
 				<div class="container carousel-caption">							
-					<h2 class="heading animated fadeInLeftBig">We love to explore <span>design</span><i class="fa fa-chevron-right"></i></h2>
-					<p class="slide-info animated fadeInRightBig">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>				
+					<h2 class="heading animated fadeInLeftBig">Great North <span>Run</span><i class="fa fa-chevron-right"></i></h2>
+					<p class="slide-info animated fadeInRightBig">Isobel raises £600 for Kate's Kitchen</p>				
 				</div>
 			</div>
-			<div class="item" style="background-image: url(assets/images/slider/5.jpg)">
+			<div class="item" style="background-image: url(assets/images/slider/volunteerWeek.jpg)">
 				<div class="container carousel-caption">							
-					<h2 class="heading animated fadeInRightBig">We love to explore <span>design</span><i class="fa fa-chevron-right"></i></h2>
-					<p class="slide-info animated fadeInLeftBig">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>				
+					<h2 class="heading animated fadeInRightBig">Volunteer <span>week</span><i class="fa fa-chevron-right"></i></h2>
+					<p class="slide-info animated fadeInLeftBig">Congratulations to David Dobson. Thank-you for all your hard work.</p>				
+				</div>
+			</div>
+			<div class="item" style="background-image: url(assets/images/slider/foodProject.jpg)">
+				<div class="container carousel-caption">							
+					<h2 class="heading animated fadeInRightBig">Let's get <span>growing</span><i class="fa fa-chevron-right"></i></h2>
+					<p class="slide-info animated fadeInLeftBig">All hands on deck</p>				
 				</div>
 			</div>
 		</div> 	
@@ -107,7 +112,7 @@
 					<div class="service-heading">
 						<div class="row">
 							<div class="col-sm-3 wow fadeInLeft" data-wow-duration="1200ms" data-wow-delay="300ms">
-								<h3>We Provide Awesome Online <span>Service</span></h3>
+								<h3>What we do at <span>Kate's Kitchen</span></h3>
 							</div>
 							<div class="col-sm-9 wow fadeInLeft" data-wow-duration="1500ms" data-wow-delay="300ms">
 								<div class="service-content">
@@ -115,7 +120,7 @@
 										<i class="fa fa-angle-right pull-left"></i>
 									</div>
 									<div class="service-text">
-										<p>we are a full service digital agency from earth. we design and build <span>websites, applications, mobile solutions and other awesome digital media.</span></p>
+										<p>What exactly do we want to say in this <span>short paragraph.</span></p>
 									</div>									
 								</div>								
 							</div>
@@ -132,8 +137,8 @@
 							</div>
 							<div class="col-sm-8 col-md-9">
 								<div class="single-service-text">
-									<h2>Creative <span>Idea</span></h2>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+									<h2>Hot <span>food</span></h2>
+									<p>A paragraph describing this initially 'core' provision at Kate's Kitchen </p>
 								</div>								
 							</div>
 						</div>
@@ -149,8 +154,8 @@
 							</div>
 							<div class="col-sm-8 col-md-9">
 								<div class="single-service-text">
-									<h2>Graphics <span>Design</span></h2>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+									<h2>Pesonal <span>support</span></h2>
+									<p>A short paragraph describing the work we do in providing personal support</p>
 								</div>								
 							</div>
 						</div>
@@ -166,8 +171,8 @@
 							</div>
 							<div class="col-sm-8 col-md-9">
 								<div class="single-service-text">
-									<h2>Coding <span>Develop</span></h2>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+									<h2>Gardening <span>Project</span></h2>
+									<p>Go daft with a few hundred characters describing the garden project</p>
 								</div>								
 							</div>
 						</div>
@@ -183,8 +188,8 @@
 							</div>
 							<div class="col-sm-8 col-md-9">
 								<div class="single-service-text">
-									<h2>Customer <span>Support</span></h2>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+									<h2>Crafty <span>Fridays</span></h2>
+									<p>Describe some of the crafts we do and indicate that we're up for exploring most things</p>
 								</div>								
 							</div>
 						</div>
@@ -207,7 +212,7 @@
 					<div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
 						<div class="default-bg about-content">
 							<h2>About <span>Us</span></h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+							<p>Stick a picture of The Beacon at the side of this and then let rip with this and the next paragraph.</p>
 							<p>but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 						</div>						
 					</div>
@@ -222,10 +227,11 @@
 						<div class="team-member wow flipInY" data-wow-duration="1200ms" data-wow-delay="300ms">
 							<div class="single-member">
 								<img class="img-responsive" src="assets/images/about-us/member1.jpg" alt="" />	
-								<h3>Mickey Router</h3>
-								<p>ceo</p>
+								<h3>Ann McLenen</h3>
+								<p>Manager</p>
 							</div>
 							<div class="overlay">
+								<p>A photo and instead of the facebook links etc we could do brief bio here.</p>
 								<ul>
 									<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
 									<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
@@ -238,15 +244,11 @@
 						<div class="team-member wow flipInY" data-wow-duration="1500ms" data-wow-delay="600ms">
 							<div class="single-member">
 								<img class="img-responsive" src="assets/images/about-us/member2.jpg" alt="" />	
-								<h3>Mickey Router</h3>
-								<p>ceo</p>
+								<h3>Karen Browning</h3>
+								<p>Operations Manager</p>
 							</div>
 							<div class="overlay">
-								<ul>
-									<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a class="google-plus" href="#"><i class="fa fa-google-plus"></i></a></li>
-								</ul>
+								
 							</div>
 						</div>
 					</div>
@@ -254,15 +256,11 @@
 						<div class="team-member wow flipInY" data-wow-duration="1800ms" data-wow-delay="900ms">
 							<div class="single-member">
 								<img class="img-responsive" src="assets/images/about-us/member3.jpg" alt="" />	
-								<h3>Mickey Router</h3>
-								<p>ceo</p>
+								<h3>Jan Whitworh</h3>
+								<p>Support Co-ordinator</p>
 							</div>
 							<div class="overlay">
-								<ul>
-									<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a class="google-plus" href="#"><i class="fa fa-google-plus"></i></a></li>
-								</ul>
+								<p>Another row after this - of course!!</p>
 							</div>
 						</div>
 					</div>
@@ -271,69 +269,15 @@
 		</div><!--/#our team--> 
 	</section><!--/#about us--> 
 	
-	<section id="testimonials">		
-		<div class="container text-center entry-header wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="500ms">
-			<div class="col-sm-6 col-sm-offset-3">
-				<h2>Testimonials</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>	
-			</div>							
-		</div>	
-		<div id="testimonial-slider" class="carousel slide wow fadeInUp" data-ride="carousel"  data-wow-duration="1000ms" data-wow-delay="300ms">
-			<div class="carousel-inner">
-				<div class="item active">
-					<div class="testimony-person animated fadeIn">
-						<img class="img-responsive" src="assets/images/testimonial/man1.png" alt="" />	
-					</div>
-					<div class="testimony-caption default-bg">
-						<div class="testimonial animated rubberBand">
-							<h3>Frank Furious</h3>
-							<h4>Art Director</h4>
-							<i class="fa  fa-angle-down"></i>
-							<p>“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s ”</p>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="testimony-person animated fadeIn">
-						<img class="img-responsive" src="assets/images/testimonial/man2.png" alt="" />		
-					</div>
-					<div class="testimony-caption default-bg">
-						<div class="testimonial animated rubberBand">
-							<h3>Roberto Carlos</h3>
-							<h4>Chief Executive</h4>
-							<i class="fa  fa-angle-down"></i>
-							<p>“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s ”</p>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="testimony-person animated fadeIn">
-						<img class="img-responsive" src="assets/images/testimonial/man3.png" alt="" />	
-					</div>
-					<div class="testimony-caption default-bg">
-						<div class="testimonial animated rubberBand">
-							<h3>Mark Derain</h3>
-							<h4>Develop Manager</h4>
-							<i class="fa  fa-angle-down"></i>
-							<p>“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s ”</p>
-						</div>
-					</div>
-				</div>					
-			</div>
-			<ol class="carousel-indicators">
-				<li data-target="#testimonial-slider" data-slide-to="0" class="active"></li>
-				<li data-target="#testimonial-slider" data-slide-to="1"></li>
-				<li data-target="#testimonial-slider" data-slide-to="2"></li>
-			</ol><!--/.carousel-indicators-->
-		</div>
-	</section><!--/#testimonials--> 
+	
 	
 	<section id="portfolio">
 		<div class="container">
 			<div class="container text-center entry-header wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="300ms">
 				<div class="col-sm-6 col-sm-offset-3">
 					<h2>Our <span>Portfolio</span></h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>	
+					<p>Not sure what to call this section and therefore what to call it. Of course we do not need to keep all of the sections and it would be better just to take a section out than repeat ourselves.</p>
+					<p>That doesn't mean that this or any other particular section should be made redundant. Perhaps the syle of this section would better suit something that's gone before (ie. the 'What we do' section</p>	
 				</div>		
 			</div>			
 			<div id="portfolio-slider" class="carousel slide carousel-fade" data-ride="carousel">
@@ -489,8 +433,8 @@
 		<div class="container">
 			<div class="row text-center entry-header wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="300ms">
 				<div class="col-sm-6 col-sm-offset-3">
-					<h2>Our <span>Clients</span></h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
+					<h2>Our <span>sponsors and/or partners?</span></h2>
+					<p>We can put a whole lot of links in here.</p>
 				</div>		
 			</div>
 			<div id="clients-carousel" class="carousel slide" data-ride="carousel">
@@ -523,7 +467,7 @@
 			<div class="row text-center entry-header wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="500ms">
 				<div class="col-sm-6 col-sm-offset-3">
 					<h2>Blog</h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
+					<p>Up to us if we want an actual 'Blog', but we could still use this section to list past and/or future events/news.</p>
 				</div>								
 			</div>
 			<div class="row">
@@ -648,9 +592,9 @@
 					<div class="col-sm-12 col-md-3 col-md-offset-1 contact-details wow fadeInUp" data-wow-duration="1600ms" data-wow-delay="500ms">
 						<h2>Contact Us</h2>
 						<ul>
-							<li><i class="fa fa-phone"></i> <span>Phone number <br>+843-245-5844</span></li>							
-							<li><i class="fa fa-map-marker"></i> <span>Our address:<br>2172 Poe Road, Florence, SC 29501</span></li>							
-							<li><i class="fa fa-envelope"></i> <span>Email address:<br>noreply@yourmail.com</span></li>							
+							<li><i class="fa fa-phone"></i> <span>Phone number <br>01461 246444</span></li>							
+							<li><i class="fa fa-map-marker"></i> <span>Our address:<br>2-4 Bank Street, Annan, DG12 6AA</span></li>							
+							<li><i class="fa fa-envelope"></i> <span>Email address:<br>info@kateskitchen.org</span></li>							
 							<li><i class="fa fa-twitter"></i> <span>Twitter:<br>twitter.com/themeregion</span></li>							
 						</ul>						
 					</div>
@@ -659,7 +603,7 @@
 		</div>		
 		<div class="bottom default-bg text-center wow fadeIn" data-wow-duration="1500ms" data-wow-delay="300ms">
 			<div class="container  text-center">
-				<p>copyright &copy; 2017 butex theme. All Rights Reserved.<br> Designed by <a href="http://www.themeregion.com">ThemeRegion</a></p>				
+				<p>copyright &copy; 2017 butex theme. All Rights Reserved.<br> Designed by <a href="http://www.themeregion.com">ThemeRegion</a><br>With contributions by David Colquhoun</p>				
 			</div>
 		</div>	
 	</footer><!--/#footer--> 
@@ -672,6 +616,6 @@
   	<script type="text/javascript" src="assets/js/canvas.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.isotope.min.js"></script>
 	<script type="text/javascript" src="assets/js/wow.min.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>	
+    <script type="text/javascript" src="assets/js/main.js"></script>		
 </body>
 </html>
