--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">	
 	<link href="assets/css/main.css" rel="stylesheet">
 	<link href="assets/css/responsive.css" rel="stylesheet">
-
     <!--[if lt IE 9]>
 	    <script src="assets/js/html5shiv.js"></script>
 	    <script src="assets/js/respond.min.js"></script>
@@ -131,8 +130,8 @@
 					<div class="single-service  wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
 						<div class="row">
 							<div class="col-sm-4 col-md-3">
-								<div class="single-service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
-									<i class="fa fa-lightbulb-o"></i>
+								<div class="icon icon-food icon-food-dims service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
+									
 								</div>								
 							</div>
 							<div class="col-sm-8 col-md-9">
@@ -150,11 +149,11 @@
 							<div class="col-sm-4 col-md-3">
 								<div class="single-service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
 									<i class="fa fa-bolt"></i>
-								</div>								
+								</div>							
 							</div>
 							<div class="col-sm-8 col-md-9">
 								<div class="single-service-text">
-									<h2>Pesonal <span>support</span></h2>
+									<h2>Personal <span>support</span></h2>
 									<p>A short paragraph describing the work we do in providing personal support</p>
 								</div>								
 							</div>
@@ -611,7 +610,8 @@
 	<!--/Scripts--> 
     <script type="text/javascript" src="assets/js/jquery.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>	
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGXvKr3PVQ9Y72XJmsVk4FvceFkhWu3k4&callback=initMap"
+  	type="text/javascript"></script>  	
   	<script type="text/javascript" src="assets/js/gmaps.js"></script>
   	<script type="text/javascript" src="assets/js/canvas.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.isotope.min.js"></script>
