--- a/_drafts/index.html
+++ b/_drafts/index.html
@@ -131,8 +131,8 @@
 					<div class="single-service  wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
 						<div class="row">
 							<div class="col-sm-4 col-md-3">
-								<div class="single-service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
-									<i class="fa fa-lightbulb-o"></i>
+								<div class="icon icon-food icon-food-dims service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
+									
 								</div>								
 							</div>
 							<div class="col-sm-8 col-md-9">
@@ -226,8 +226,8 @@
 					<div class="col-sm-4">
 						<div class="team-member wow flipInY" data-wow-duration="1200ms" data-wow-delay="300ms">
 							<div class="single-member">
-								<img class="img-responsive" src="assets/images/about-us/member1.jpg" alt="" />	
-								<h3>Ann McLenen</h3>
+								<img class="img-responsive" src="assets/images/about-us/anne.jpg" alt="" />	
+								<h3>Ann McLachlan</h3>
 								<p>Manager</p>
 							</div>
 							<div class="overlay">
@@ -243,8 +243,8 @@
 					<div class="col-sm-4">
 						<div class="team-member wow flipInY" data-wow-duration="1500ms" data-wow-delay="600ms">
 							<div class="single-member">
-								<img class="img-responsive" src="assets/images/about-us/member2.jpg" alt="" />	
-								<h3>Karen Browning</h3>
+								<img class="img-responsive" src="assets/images/about-us/karen.jpg" alt="" />	
+								<h3>Karen Brown</h3>
 								<p>Operations Manager</p>
 							</div>
 							<div class="overlay">
@@ -255,8 +255,8 @@
 					<div class="col-sm-4">
 						<div class="team-member wow flipInY" data-wow-duration="1800ms" data-wow-delay="900ms">
 							<div class="single-member">
-								<img class="img-responsive" src="assets/images/about-us/member3.jpg" alt="" />	
-								<h3>Jan Whitworh</h3>
+								<img class="img-responsive" src="assets/images/about-us/kirsty.jpg" alt="" />	
+								<h3>Kirsty McEwen</h3>
 								<p>Support Co-ordinator</p>
 							</div>
 							<div class="overlay">
@@ -611,7 +611,8 @@
 	<!--/Scripts--> 
     <script type="text/javascript" src="assets/js/jquery.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>	
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGXvKr3PVQ9Y72XJmsVk4FvceFkhWu3k4&callback=initMap"
+  	type="text/javascript"></script>  	
   	<script type="text/javascript" src="assets/js/gmaps.js"></script>
   	<script type="text/javascript" src="assets/js/canvas.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.isotope.min.js"></script>
